# qight_chat

./: .gitignore  Cargo.toml  README.md  qight_outbox.db  quic.db  server_cert  server_key
qight_chat_user_db/TABLES/users/: data.tbl  schema.tbl
src/: main.rs
src/logic/: connect.rs  db.rs  key_converter.rs  mod.rs  send_message.rs
src/ui/: intro.rs  mod.rs
